<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OverLoad Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Menu">Menu</string>
    <string name="TpbuttonText">TexturePack</string>
    <string name="LuanchButtonText">Launch!</string>
    <string name="ModButtonText">Mod</string>
    <string name="SkinButtonText">Skin</string>
    <string name="AddonButtonText">Addon</string>

</resources>
